# universal-code-review-graph

./: .co-authored  .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  benchmark.py  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/code-graph-action/: action.yml
.github/workflows/: ci.yml  tests.yml
app/: index.html
app/src/: App.tsx  index.css
app/src/components/: Navigation.tsx
app/src/sections/: AIPlatforms.tsx  Documentation.tsx  Features.tsx  Footer.tsx  Hero.tsx  LiveQuery.tsx  Workflow.tsx
docs/: adding-a-language.md  api-reference.md  architecture.md  developer-guide.md
hooks/: install-hooks.sh  pre-commit
qa-agents/: QA-MASTER-PLAN.md  claude-qa-agent.md  codex-qa-agent.md  gemini-qa-agent.md  kimi-k2-qa-agent.md  qwen-qa-agent.md
universal-code-graph/: .code-graph.example.yml  CONTRIBUTING.md  EXAMPLES.md  MATHEMATICAL_OPTIMIZATION.md  README.md  benchmark_math_optimization.py  cli.py  code_graph.py  compact_serializer.py  conftest.py  install.sh  math_optimizer.py  pyproject.toml  requirements-core.txt  requirements.txt  server.py  server_optimized.py  setup.py
universal-code-graph/configs/: continue.json  cursor.json  kimi.json  windsurf.json
universal-code-graph/tests/: smoke_test.py  test_graph_core.py  test_qwen_qa_agent.py
universal-code-graph/token_optimizer/: __init__.py  entropy_compressor.py  graph_pruner.py  integration.py  physics_simulator.py  token_budget.py  vector_selector.py
universal-code-graph/universal_code_review_graph/: __init__.py  code_graph.py  server.py
vscode-code-graph/: .vscodeignore  BUILD.md  CHANGELOG.md  LICENSE  README.md  build.bat  build.sh  package-lock.json  package.json
vscode-code-graph/server/: code_graph.py  run_tool.py  server.py
vscode-code-graph/src/: codeGraphProvider.ts  commands.ts  extension.ts  mcpServer.ts
